Fix text vertical alignment with Capsize. (#377)

--- a/styles/global.css
+++ b/styles/global.css
@@ -27,6 +27,19 @@ html {
   min-height: 100vh;
 }
 
+/* https://seek-oss.github.io/capsize/ */
+.capsize::before {
+  content: '';
+  margin-bottom: -0.098em;
+  display: table;
+}
+
+.capsize::after {
+  content: '';
+  margin-top: -0.219em;
+  display: table;
+}
+
 .skip-nav {
   @apply absolute px-4 py-2 transition-transform duration-200 transform -translate-y-12 left-1/4 focus:top-4 focus:translate-y-3 -top-8;
 }
